--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "author": "nigelwtf",
   "license": "MIT",
   "dependencies": {
+    "@babel/core": "^7.4.0",
+    "@babel/plugin-syntax-typescript": "^7.3.3",
     "@types/ramda": "^0.26.5",
     "@zeit/next-typescript": "^1.1.1",
     "babel-plugin-styled-components": "^1.10.0",
@@ -12,7 +14,8 @@
     "ramda": "^0.26.1",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
-    "styled-components": "^4.2.0"
+    "styled-components": "^4.2.0",
+    "typescript": "^3.3.4000"
   },
   "scripts": {
     "dev": "next",
