--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,11 +19,10 @@ jobs:
     steps:
       - checkout
 
-      - setup_remote_docker:
-        docker_layer_caching: true
+      - setup_remote_docker
 
       - run: |
         TAG=$CIRCLE_BUILD_NUM
-        docker build -t wednesdaywednesday/www:$TAG .
+        docker build -t itswednesday/www:$TAG .
         docker login -u $DOCKER_USER -p $DOCKER_PASS
-        docker push wednesdaywednesday/www:$TAG
+        docker push itswednesday/www:$TAG
